--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,13 @@
 # TMDB API Configuration - EXAMPLE FILE
-# Copy this file to .env and add your actual API key
+# Copy this file to .env and add your actual API keys
 
-VITE_TMDB_API_KEY=your_api_key_here
+# TMDB API Key
+VITE_TMDB_API_KEY=your_tmdb_api_key_here
+
+# Firebase Configuration
+VITE_FIREBASE_API_KEY=your_firebase_api_key_here
+VITE_FIREBASE_AUTH_DOMAIN=your_project.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=your_project_id
+VITE_FIREBASE_STORAGE_BUCKET=your_project.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
+VITE_FIREBASE_APP_ID=your_app_id
