--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "deploy": "npm run build && node deploy-script.js"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "firebase": "^10.14.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1",
-    "axios": "^1.7.7"
+    "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
